[package]
name = "rsqlbench"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-channel = "2.3.1"
async-trait = "0.1.80"
config = "0.14.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
    "time",
] }
sqlx = { version = "0.7", features = [
    "mysql",
    # "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls",
] }
time = { version = "0.3.36", features = ["macros"] }
const_format = "0.2.32"
static_assertions = "1.1.0"
clap = { version = "4.5.9", features = ["derive"] }
