[workspace]
members = [
    "crates/rsqlbench-core",
    "crates/rsqlbench",
    "crates/rsqlbench-yasdb",
]
resolver = "2"

[workspace.dependencies]
time = "0.3.36"
tracing = "0.1"
tokio = "1.38.0"
serde = { version = "1.0.203", features = ["derive"] }
config = "0.14.0"
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-channel = "2.3.1"
thiserror = "1.0.62"
async-trait = "0.1.80"

[profile.release]
opt-level = 'z'
lto = true
# strip = true
