[package]
name = "rsqlbench"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rsqlbench-core = { path = "../rsqlbench-core" }
rsqlbench-yasdb = { path = "../rsqlbench-yasdb", optional = true }
clap = { version = "4.5.9", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
    "time",
] }
case_style = "0.2.1"
config = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
time = { workspace = true }
async-channel = { workspace = true }
url = "2.5.2"
thiserror = { workspace = true }
serde = { workspace = true }
prometheus = { version = "0.13.4", features = ["process"] }
axum = "0.7.5"
once_cell = { workspace = true }

[features]
yasdb = ["rsqlbench-yasdb"]
